fix styling of map on mobile home page

--- a/components/MapChart/MapChartHeader/MapChartHeader.module.scss
+++ b/components/MapChart/MapChartHeader/MapChartHeader.module.scss
@@ -4,50 +4,67 @@
   width: 500px;
   height: 500px;
 }
+
 .map-container {
   position: relative;
-  display: block;
-  height: 70vh;
+  &__map {
+    position: relative;
+    display: block;
+    height: 50vh;
+
+    @media (min-width: 1024px) {
+      height: 70vh;
+    }
+  }
 }
 
 .map-header-container {
   background: $charcoal;
 
   &__map-legend {
-    position: absolute;
+    position: relative;
     display: flex;
-    background: $grey;
     flex-direction: column;
-
-    bottom: 0;
-    left: 0;
     padding: $size-m;
+
+    @media (min-width: 1024px) {
+      background: $grey;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
 
     span {
       @include typographylargeheadingh2;
       line-height: 48px;
       line-break: loose;
       display: flex;
-      max-width: 257px;
       color: $white;
+
+      @media (min-width: 1024px) {
+        max-width: 257px;
+      }
     }
   }
 }
 
 .map-header__control-bar {
   display: flex;
+  flex-direction: column;
+  align-content: space-between;
+
+
+  @media (min-width: 1024px) {
+    flex-direction: row;
+  }
+
   &--first {
-    flex: 1;
-    margin-right: $space-m;
-    margin-left: $space-m;
-  }
-  &__col--1 {
-    flex: 1;
-  }
-  &__col--2 {
     flex: 2;
+    padding: 0 $space-l;
   }
-  &__col--3 {
-    flex: 3;
+
+  &__col--1 {
+    flex: 2;
+    padding: 0 $space-l;
   }
 }
