--- a/components/MapChart/MapChartHeader/MapStatistics.module.scss
+++ b/components/MapChart/MapChartHeader/MapStatistics.module.scss
@@ -1,24 +1,14 @@
 @import '../../../styles/lumen-tokens';
 
-.map-statistics-block-grid {
-  display: grid;
-  column-gap: $space-xl;
-  grid-template-columns: repeat(3, minmax(0, 600px));
-  justify-content: center;
-
-  &--duo {
-    grid-template-columns: repeat(2, minmax(275px, 600px));
-  }
-
-  &--single {
-    grid-template-columns: minmax(275px, 600px);
-  }
-}
 .map-statistics-block {
-  padding: $space-l;
+  padding: $space-s $space-l;
   text-align: left;
-  width: 100%;
-  height: 100%;
+  flex: 1;
+
+  @media (min-width: 1024px) {
+    flex-direction: row;
+    padding: $space-l;
+  }
 
   &__title {
     @include typographylargeparagraphsmallcopy_regular;
